<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/are_you_sure_you_want_to_logout"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnYes"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:fontFamily="@font/cairo_bold"
            android:text="@string/yes"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:backgroundTint="@color/orange" />

        <View
            android:layout_width="30dp"
            android:layout_height="50dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNo"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:fontFamily="@font/cairo_bold"
            android:text="@string/no"
            android:textSize="16sp"
            app:backgroundTint="#424143" />
    </LinearLayout>
</LinearLayout>
