<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center">

        <TextView
            android:id="@+id/dialogMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/are_you_sure_you_want_to_logout"
            android:textSize="16sp"
            android:fontFamily="@font/cairo_bold"
            android:textColor="@color/black_text"
            android:layout_marginBottom="16dp"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnConfirm"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/yes"
                android:backgroundTint="@color/orange"
                app:cornerRadius="20dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:fontFamily="@font/cairo_bold"
                android:textColor="@color/white"/>
            <View
                android:layout_width="8dp"
                android:layout_height="0dp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:backgroundTint="@color/orange"
                android:text="@string/no"
                android:textSize="16sp"
                app:cornerRadius="20dp"
                android:fontFamily="@font/cairo_bold"
                android:textColor="@color/white"
                android:layout_height="wrap_content" />


        </LinearLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
