<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.activities.EditAddressActivity">

    <include
        android:id="@+id/includedTab"
        layout="@layout/inner_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/includedTab">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/cairo_bold"
            android:text="@string/address"
            android:textColor="@color/black_text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/addressEt"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_bg"
            android:drawableEnd="@drawable/baseline_location_pin_24"
            android:editable="false"
            android:drawableTint="@color/orange"
            android:fontFamily="@font/cairo_regular"
            android:paddingHorizontal="16dp"
            android:textAlignment="viewStart"
            android:textColor="@color/black_text"
            tools:text="wewewewewe" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/cairo_bold"
            android:text="@string/city"
            android:textColor="@color/black_text"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/sectorCity"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_bg"
            android:fontFamily="@font/cairo_regular"
            android:paddingHorizontal="16dp"
            android:textAlignment="viewStart"
            android:textColor="@color/black_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/cairo_bold"
            android:text="@string/area"
            android:textColor="@color/black_text"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/sectorArea"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_bg"
            android:fontFamily="@font/cairo_regular"
            android:paddingHorizontal="16dp"
            android:textAlignment="viewStart"
            android:textColor="@color/black_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/cairo_bold"
            android:text="@string/address_in_detail"
            android:textColor="@color/black_text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/locationDetailsEt"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_bg"
            android:fontFamily="@font/cairo_regular"
            android:paddingHorizontal="16dp"
            android:textAlignment="viewStart"
            android:textColor="@color/black_text"
            tools:text="wewewewewe" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/cairo_bold"
            android:backgroundTint="@color/orange"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:cornerRadius="10dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>