<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context=".ui.activities.PaymentActivity">

    <include
        android:id="@+id/includedTab"
        layout="@layout/inner_bar" />

    <TextView
        android:id="@+id/clientInfoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/client_info"
        android:textColor="@color/orange"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/includedTab" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/nameCard"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="25dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clientInfoText"
        app:strokeWidth="0dp">

        <TextView
            android:id="@+id/nameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@font/cairo_bold"
            android:textColor="@color/black_text"
            android:textSize="14sp"
            tools:text="Waleed khater" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/phoneCard"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="25dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameCard"
        app:strokeWidth="0dp">

        <TextView
            android:id="@+id/phoneTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@font/cairo_bold"
            android:textColor="@color/black_text"
            android:textSize="14sp"
            tools:text="0789105999" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/addressCard"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="25dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneCard"
        app:strokeWidth="0dp">

        <Spinner
            android:id="@+id/addressesSpinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/addNewAddressTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/add_new_address"
        android:textColor="@color/orange"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addressCard" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/curved_orange_bg"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addNewAddressTv">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/final_total"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/totalItemsPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/cairo_bold"
                android:text="Free"
                android:textAlignment="textEnd"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/delivery_fees"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/deliveryFeesTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/cairo_bold"
                android:text="Free"
                android:textAlignment="textEnd"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/delivery_time"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/deliveryTimeTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/between_24_to_48_hours"
                android:textAlignment="textEnd"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/addProductsButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/cairo_bold"
            android:text="@string/add_more"
            android:textColor="@color/orange"
            android:textSize="16sp"
            app:cornerRadius="25dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/onlinePaymentButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/cairo_bold"
            android:text="@string/pay_online"
            android:textColor="@color/orange"
            android:textSize="16sp"
            app:cornerRadius="25dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/CashOnDeliveryButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/cairo_bold"
            android:text="@string/cash_on_delivery"
            android:textColor="@color/orange"
            android:textSize="16sp"
            app:cornerRadius="25dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>